--- a/src/app/layout/header/header.component.css
+++ b/src/app/layout/header/header.component.css
@@ -7,3 +7,22 @@
   font-weight: bold;
   text-transform: capitalize;
 }
+
+@media (max-width: 992px) {
+  .navbar-wrapper {
+    position: absolute;
+    top: -110px;
+    right: 0;
+    bottom: auto;
+    left: auto;
+    width: 100%;
+    height: 110px;
+    padding: 15px;
+    background: #6000ff;
+    z-index: 99;
+    transition: 0.5s top ease-in-out;
+  }
+  .show-navbar {
+    top: 56px;
+  }
+}
