--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,16 +1,20 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">my store</a>
-    <button class="navbar-toggler" type="button">
+    <button class="navbar-toggler" type="button" (click)="isNavExpanded = !isNavExpanded">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div>
+    <div class="navbar-wrapper" [ngClass]="{'show-navbar': isNavExpanded}">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">products list</a>
+          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+            products list
+          </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/cart" routerLinkActive="active">cart</a>
+          <a class="nav-link" routerLink="/cart" routerLinkActive="active">
+            cart
+          </a>
         </li>
       </ul>
     </div>
