--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,4 @@
+/* product common styles */
 .card-text {
   margin-bottom: 8px;
 }
@@ -17,11 +18,6 @@
   margin-bottom: 15px;
 }
 
-.form-label {
-  margin-bottom: 0;
-  margin-right: 10px;
-}
-
 .card-amount .form-control {
   width: 90px;
   font-size: 12px;
@@ -29,11 +25,19 @@
   color: #7765ff;
 }
 
+/* form common styles */
+.form-label {
+  margin-bottom: 0;
+  margin-right: 10px;
+}
+
+
 .form-control:focus {
   box-shadow: none;
   border-color: #ced4da;
 }
 
+/* buttons common styles */
 .btn {
   width: 90px;
   font-size: 12px;
