--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -23,17 +23,21 @@
         <div class="form-group">
           <label for="cartPaymentName" class="form-label">Full name</label>
           <input type="text" class="form-control" id="cartPaymentName" name="cartPaymentName" required 
-          minlength="3" [(ngModel)]="paymentFullName" placeholder="minimum 3 characters">
+          minlength="3" [(ngModel)]="paymentFullName" (ngModelChange)="validateName($event)" placeholder="minimum 3 characters">
+          <span *ngIf="invalidName" class="error-msg">your name should contain atleaset 3 characters</span>
         </div>
         <div class="form-group">
           <label for="cartPaymentAddress" class="form-label">Address</label>
           <input type="text" class="form-control" id="cartPaymentAddress" name="cartPaymentAddress" required 
-          minlength="6" [(ngModel)]="paymentAddress" placeholder="minimum 6 characters">
+          minlength="6" [(ngModel)]="paymentAddress" (ngModelChange)="validateAddress($event)" placeholder="minimum 6 characters">
+          <span *ngIf="invalidAddress" class="error-msg">your address should contain atleaset 6 characters</span>
         </div>
         <div class="form-group">
           <label for="cartPaymentCard" class="form-label">Credit card number</label>
           <input type="text" class="form-control" id="cartPaymentCard" name="cartPaymentCard" required 
-          minlength="16" maxlength="16" [(ngModel)]="paymentCard" placeholder="16-digit number">
+          minlength="16" maxlength="16" pattern="[0-9]+" [(ngModel)]="paymentCard" (ngModelChange)="validateCreditCard($event)" 
+          placeholder="16-digit number">
+          <span *ngIf="invalidCreditCard" class="error-msg">your credit card number should be 16 degit numbers</span>
         </div>
         <button type="submit" class="btn btn-primary" [disabled]="cartPaymentForm.invalid">Submit</button>
       </form>
