--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -7,7 +7,7 @@
           <h6 class="card-text">{{item?.name}}</h6>
           <span class="card-price">{{item?.price | currency}}</span>
           <div class="card-amount">
-            <label for="itemAmount" class="form-label">Amount:</label>
+            <label for="itemAmount" class="form-label">amount:</label>
             <input type="number" class="form-control" id="itemAmount" name="itemAmount" placeholder="0" min="0" 
             (click)="$event.stopPropagation();onChangeAmount(item, i)" [(ngModel)]="item.amount">
           </div>
@@ -21,19 +21,19 @@
     <div class="cart-payment">
       <form #cartPaymentForm="ngForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label for="cartPaymentName" class="form-label">Full name</label>
+          <label for="cartPaymentName" class="form-label">full name</label>
           <input type="text" class="form-control" id="cartPaymentName" name="cartPaymentName" required 
           minlength="3" [(ngModel)]="paymentFullName" (ngModelChange)="validateName($event)" placeholder="minimum 3 characters">
           <span *ngIf="invalidName" class="error-msg">your name should contain atleaset 3 characters</span>
         </div>
         <div class="form-group">
-          <label for="cartPaymentAddress" class="form-label">Address</label>
+          <label for="cartPaymentAddress" class="form-label">address</label>
           <input type="text" class="form-control" id="cartPaymentAddress" name="cartPaymentAddress" required 
           minlength="6" [(ngModel)]="paymentAddress" (ngModelChange)="validateAddress($event)" placeholder="minimum 6 characters">
           <span *ngIf="invalidAddress" class="error-msg">your address should contain atleaset 6 characters</span>
         </div>
         <div class="form-group">
-          <label for="cartPaymentCard" class="form-label">Credit card number</label>
+          <label for="cartPaymentCard" class="form-label">credit card number</label>
           <input type="text" class="form-control" id="cartPaymentCard" name="cartPaymentCard" required 
           minlength="16" maxlength="16" pattern="[0-9]+" [(ngModel)]="paymentCard" (ngModelChange)="validateCreditCard($event)" 
           placeholder="16-digit number">
