--- a/src/app/components/product-item/product-item.component.css
+++ b/src/app/components/product-item/product-item.component.css
@@ -1,14 +1,29 @@
 .card {
   margin: 15px;
   transition: 0.2s all ease-in-out;
-  cursor: pointer;
 }
 
 .card:hover {
-  background-color: #d4d1f1;
+  background-color: #e3e1f7;
+}
+
+.card.selected {
+  background-color: #e3e1f7;
 }
 
 .card .card-img-top {
   max-height: 350px;
   object-fit: cover;
+}
+
+.card-actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.card-actions .btn {
+  width: 50%;
+  height: 35px;
+  margin: 0 5px;
 }
