--- a/src/app/components/products-list/products-list.component.css
+++ b/src/app/components/products-list/products-list.component.css
@@ -1,7 +1,24 @@
+.products-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0;
+}
+
 .products-list {
   display: flex;
   flex-wrap: wrap;
-  margin: 40px 0;
+  margin-top: 15px;
+}
+
+.products-count {
+  font-size: 20px;
+  text-transform: capitalize;
+}
+
+.products-count span {
+  font-weight: 500;
 }
 
 .product-item {
