--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -6,12 +6,12 @@
     </button>
     <div class="navbar-wrapper" [ngClass]="{'show-navbar': isNavExpanded}">
       <ul class="navbar-nav">
-        <li class="nav-item">
+        <li class="nav-item" (click)="isNavExpanded = false">
           <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
             products list
           </a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" (click)="isNavExpanded = false">
           <a class="nav-link" routerLink="/cart" routerLinkActive="active">
             cart
           </a>
