--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 .card-price {
   display: block;
   font-size: 14px;
-  font-weight: bold;
+  font-weight: 500;
   margin-bottom: 15px;
   color: #7765ff;
 }
@@ -21,7 +21,7 @@
 .card-amount .form-control {
   width: 90px;
   font-size: 12px;
-  font-weight: bold;
+  font-weight: 500;
   color: #7765ff;
 }
 
@@ -29,6 +29,7 @@
 .form-label {
   margin-bottom: 0;
   margin-right: 10px;
+  text-transform: capitalize;
 }
 
 .form-control:focus {
@@ -55,7 +56,7 @@
 
 .btn-back {
   font-size: 12px;
-  font-weight: bold;
+  font-weight: 500;
   margin-top: 10px;
   color: #7765ff;
   text-transform: capitalize;
@@ -64,5 +65,5 @@
 .error-msg {
   font-size: 12px;
   color: #d82e2e;
+  text-transform: capitalize;
 }
-
