--- a/src/app/components/product-item/product-item.component.html
+++ b/src/app/components/product-item/product-item.component.html
@@ -1,20 +1,38 @@
 <div class="product-item card" (click)="selectProduct(product)" [ngClass]="{'selected': product?.isSelected}">
   <img [src]="product?.url" class="card-img-top" [alt]="product?.name">
   <div class="card-body text-center">
-    <h5 class="card-title">{{product?.name}}</h5>
-    <p class="card-text">{{product?.description}}</p>
-    <span class="card-price">{{product?.price | currency}}</span>
+    <h5 class="card-title">
+      {{product?.name}}
+    </h5>
+    <p class="card-text">
+      {{product?.description}}
+    </p>
+    <span class="card-price">
+      {{product?.price | currency}}
+    </span>
     <div class="card-amount">
       <label for="productAmount" class="form-label">amount:</label>
-      <input type="number" class="form-control" id="productAmount" name="productAmount" min="0" 
-      (click)="$event.stopPropagation()" [(ngModel)]="product.amount">
+      <input 
+        type="number" 
+        class="form-control" 
+        id="productAmount" 
+        name="productAmount" 
+        min="0" 
+        (click)="$event.stopPropagation()" 
+        [(ngModel)]="product.amount">
     </div>
     <div class="card-actions">
-      <button type="button" class="btn btn-warning" [disabled]="!product?.amount" 
+      <button 
+        type="button" 
+        class="btn btn-warning" 
+        [disabled]="!product?.amount" 
         (click)="$event.stopPropagation();addToCart(product)">
         add to cart
       </button>
-      <button type="button" class="btn btn-primary" (click)="getProductDetails(product)">
+      <button 
+        type="button" 
+        class="btn btn-primary" 
+        (click)="getProductDetails(product)">
         product details
       </button>
     </div>
