--- a/src/app/components/products-list/products-list.component.html
+++ b/src/app/components/products-list/products-list.component.html
@@ -1,10 +1,13 @@
 <div class="products-wrapper">
   <div *ngIf="selectedProductsCount" class="products-count">
-    selected products: <span>{{selectedProductsCount}}</span>
+    selected products: <span>{{ selectedProductsCount }}</span>
   </div>
   <div class="products-list">
     <div *ngFor="let product of productsList" class="product-item">
-      <app-product-item [product]="product" (onSelectProduct)="updateSelectedProductsCount()"></app-product-item>
+      <app-product-item
+        [product]="product"
+        (onSelectProduct)="updateSelectedProductsCount()">
+      </app-product-item>
     </div>
   </div>
 </div>
