--- a/src/app/components/alert-popup/alert-popup.component.html
+++ b/src/app/components/alert-popup/alert-popup.component.html
@@ -1,11 +1,15 @@
 <ng-template #alertModal>
   <div class="modal-header">
-    <h5 class="modal-title pull-left">{{headerText}}</h5>
-    <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
+    <h5 class="modal-title pull-left">{{ headerText }}</h5>
+    <button
+      type="button"
+      class="btn-close close pull-right"
+      aria-label="Close"
+      (click)="modalRef?.hide()">
       <span aria-hidden="true" class="visually-hidden">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-    {{bodyText}}
+    {{ bodyText }}
   </div>
 </ng-template>
