--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,13 +1,22 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/">my store</a>
-    <button class="navbar-toggler" type="button" (click)="isNavExpanded = !isNavExpanded">
+    <a class="navbar-brand" routerLink="/">
+      my store
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      (click)="isNavExpanded = !isNavExpanded">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-wrapper" [ngClass]="{'show-navbar': isNavExpanded}">
+    <div class="navbar-wrapper" [ngClass]="{ 'show-navbar': isNavExpanded }">
       <ul class="navbar-nav">
         <li class="nav-item" (click)="isNavExpanded = false">
-          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
+          <a
+            class="nav-link"
+            routerLink="/"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }">
             products list
           </a>
         </li>
